# OmniEmployee

./: .gitignore  CLAUDE.md  README.md  env.example  main.py  memory_features.md  pyproject.toml  test_booking.py  test_reference_loading.py
.omniemployee/backups/: SKILL_20251226_134415.md  SKILL_20251226_134831.md  report_20251226_162908.md  skill_20251226_134403.md
docs/: agent.md  agent_skill.md  agent_tool.md  memory_system.md
gui/: Cargo.toml  README.md
gui/src/: app.rs  handlers.rs  main.rs  models.rs
gui/src/api/: mod.rs
gui/src/components/: header.rs  input.rs  messages.rs  mod.rs  sidebar.rs
gui/src/theme/: mod.rs
scripts/: reset_databases.py
src/: __init__.py
src/configs/: agent.yaml
src/omniemployee/: __init__.py
src/omniemployee/context/: __init__.py  manager.py  message.py
src/omniemployee/core/: __init__.py  agent.py  loop.py
src/omniemployee/llm/: __init__.py  provider.py
src/omniemployee/memory/: __init__.py  integration.py  memory_manager.py  models.py  tier_manager.py
src/omniemployee/memory/knowledge/: __init__.py  conflict.py  extractor.py  integration.py  models.py  store.py  vector_store.py
src/omniemployee/memory/operators/: __init__.py  conflict.py  encoder.py  energy.py  router.py
src/omniemployee/memory/storage/: __init__.py  base.py  l1_working.py  l2_graph.py  l2_vector.py  l3_crystal.py
src/omniemployee/runtime/: __init__.py
src/omniemployee/skills/: __init__.py  loader.py  models.py  registry.py
src/omniemployee/tools/: __init__.py  base.py  grep.py  list_dir.py  read_file.py  registry.py  run_command.py  web_extract.py  web_search.py  write_file.py
src/omniemployee/web/: __init__.py  app.py
src/omniemployee/web/static/: index.html
src/prompts/: conversation_summary.md  memory_conflict_verify.md  memory_consolidation.md  system_prompt.md  web_search_summary.md
src/skills/book-flight/: SKILL.md  reference.md
src/skills/book-flight/scripts/: confirm_booking.py  get_current_time.py  search_flights.py
src/skills/codebase-tools/: SKILL.md  advanced-search.md  reference.md
src/skills/research/: SKILL.md  reference.md
src/skills/research/scripts/: compare_sources.py  create_experiment.py  summarize_research.py  validate_claim.py
tests/: test_knowledge.py  test_knowledge_integration.py  test_memory.py
volumes/etcd/member/snap/: db
volumes/milvus/rdb_data/: IDENTITY  LOG
volumes/milvus/rdb_data_meta_kv/: IDENTITY  LOG
volumes/minio/.minio.sys/: format.json
volumes/minio/.minio.sys/tmp/.trash/: 6b2ec27c-0548-4cf5-a579-c40cdf10eb7b
