[project]
name = "omniemployee"
version = "0.1.0"
description = "A powerful and extensible base agent system with MCP and Skills support"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "litellm>=1.0.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "aiofiles>=23.0.0",
    "rich>=13.0.0",
    "python-dotenv>=1.2.1",
    "tavily-python>=0.3.0",
    "ollama>=0.6.1",
    "spacy>=3.8.11",
    "pymilvus[lite]>=2.6.6",
    "fastapi>=0.128.0",
    "uvicorn>=0.40.0",
    "milvus-lite>=2.5.1",
    "networkx>=3.6.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]
memory = [
    "pymilvus>=2.3.0",
    "asyncpg>=0.29.0",
    "networkx>=3.0",
]
memory-nlp = [
    "spacy>=3.5",  # Optional: better NER
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
