[package]
name = "omniemployee-gui"
version = "0.1.0"
edition = "2021"
authors = ["OmniEmployee Team"]
description = "A beautiful GUI for OmniEmployee AI Assistant"

[dependencies]
# GPUI from Zed - using same version as gpui-component to avoid type mismatches
gpui = { git = "https://github.com/zed-industries/zed" }

# GPUI Component library for pre-built UI components with IME support
gpui-component = { git = "https://github.com/longbridge/gpui-component", branch = "main" }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP client (blocking for GPUI compatibility)
reqwest = { version = "0.12", features = ["json", "blocking"] }

# Async runtime  
smol = "2.0"
futures = "0.3"

# Utilities
chrono = "0.4"
uuid = { version = "1.0", features = ["v4"] }
anyhow = "1.0"
urlencoding = "2.1"
regex = "1"

[features]
default = []
